--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,4 +1,4 @@
-name: Basic build
+name: Main branch - JAR
 
 on:
   push:
@@ -30,7 +30,7 @@ jobs:
     - name: Upload
       uses: actions/upload-artifact@v3
       with:
-        name: zatikon
+        name: zatikon-1.2.0-dev
         path: target/zatikon-*.jar
 
 # Well it's cool it can be deployed but I don't need that now
