--- a/.github/workflows/release-windows.yml
+++ b/.github/workflows/release-windows.yml
@@ -19,12 +19,15 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
-      - name: Set version from tag
-        id: set-version
+      - name: Get version from tag
+        id: get-version
         run: echo "version=$('${{ github.ref }}'.substring(11))" >> $env:GITHUB_OUTPUT
 
+      - name: Set version in pom.xml
+        run: mvn --batch-mode --file pom.xml versions:set '-DnewVersion=${{ steps.get-version.outputs.version }}'
+
       - name: Build with Maven
-        run: mvn --batch-mode package --file pom.xml '-Dproject.version=${{ steps.set-version.outputs.version }}'
+        run: mvn --batch-mode --file pom.xml package
 
       - name: Set up package directories
         run: mkdir target/jpack
