--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,14 +19,17 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
-      - name: Set version from tag
-        id: set-version
+      - name: Get version from tag
+        id: get-version
         run: echo "version=${GH_REF#refs/tags/v}" >> $GITHUB_OUTPUT
         env:
           GH_REF: ${{ github.ref }}
 
+      - name: Set version in pom.xml
+        run: mvn --batch-mode --file pom.xml versions:set '-DnewVersion=${{ steps.get-version.outputs.version }}'
+
       - name: Build with Maven
-        run: mvn --batch-mode package --file pom.xml '-Dproject.version=${{ steps.set-version.outputs.version }}'
+        run: mvn --batch-mode --file pom.xml package
 
       - name: Upload
         uses: actions/upload-artifact@v3
