--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,11 @@
 
     <groupId>com.chroniclogic</groupId>
     <artifactId>zatikon</artifactId>
-    <version>${project.version}</version>
+    <version>1.2.0-SNAPSHOT</version>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
-        <project.version>1.2.0-SNAPSHOT</project.version>
     </properties>
 
     <dependencies>
