--- a/.github/workflows/release-windows.yml
+++ b/.github/workflows/release-windows.yml
@@ -36,7 +36,7 @@ jobs:
         run: cp target/zatikon-*.jar target/jpack/zatikon.jar
 
       - name: Package into exe
-        run: jpackage --type exe --name Zatikon --input target/jpack/ --main-jar zatikon.jar --main-class leo.client.WindowsLauncher --dest exepack --app-version '${{ steps.set-version.outputs.version }}' --icon src/main/resources/icons/zatikon.ico --win-dir-chooser --win-shortcut --win-menu --win-shortcut-prompt --win-upgrade-uuid 6540EFA3-65AB-4E93-920C-54793ECC7E86
+        run: jpackage --type exe --name Zatikon --input target/jpack/ --main-jar zatikon.jar --main-class leo.client.WindowsLauncher --dest exepack --app-version '${{ steps.get-version.outputs.version }}' --icon src/main/resources/icons/zatikon.ico --win-dir-chooser --win-shortcut --win-menu --win-shortcut-prompt --win-upgrade-uuid 6540EFA3-65AB-4E93-920C-54793ECC7E86
 
       - name: Upload
         uses: actions/upload-artifact@v3
