--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,12 @@
             <artifactId>tinylog-impl</artifactId>
             <version>2.6.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.electronwill.night-config</groupId>
+            <artifactId>toml</artifactId>
+            <version>3.6.6</version>
+        </dependency>
+
     </dependencies>
 
     <build>
