--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,8 @@
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>        
     </properties>
 
     <dependencies>
@@ -96,6 +98,20 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.2.5</version>
             </plugin>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-compiler-plugin</artifactId>
+              <version>3.8.1</version>
+              <configuration>
+                <source>17</source> <!-- Update to match your Java version -->
+                <target>17</target>
+                <compilerArgs>
+                  <arg>-Xlint:deprecation</arg>
+                  <arg>-Xlint:removal</arg>
+                  <arg>-Xlint:unchecked</arg>
+                </compilerArgs>
+              </configuration>
+            </plugin>            
         </plugins>
     </build>
 </project>
