--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,11 @@
     
     <dependencies>
         <dependency>
+            <groupId>com.github.trilarion</groupId>
+            <artifactId>java-vorbis-support</artifactId>
+            <version>1.2.1</version>
+        </dependency>
+        <dependency>
             <groupId>org.xerial</groupId>
             <artifactId>sqlite-jdbc</artifactId>
             <version>3.42.0.0</version>
@@ -79,11 +84,6 @@
             <artifactId>lwjgl</artifactId>
             <version>3.3.1</version>
         </dependency>
-
-        <dependency>
-            <groupId>org.lwjgl</groupId>
-            <artifactId>lwjgl</artifactId>
-        </dependency>
         <dependency>
             <groupId>org.lwjgl</groupId>
             <artifactId>lwjgl-openal</artifactId>
@@ -98,7 +98,6 @@
             <artifactId>lwjgl-openal</artifactId>
             <classifier>${lwjgl.natives}</classifier>
         </dependency>
-    
     </dependencies>
     <repositories>
         <repository>
