--- a/.github/workflows/release-windows.yml
+++ b/.github/workflows/release-windows.yml
@@ -1,8 +1,9 @@
 name: Release build - Windows installer
 
 on:
-  release:
-    types: ["published"]
+  push:
+    tags:
+      - 'v*'
 
 jobs:
   build:
