--- a/.github/workflows/release-windows.yml
+++ b/.github/workflows/release-windows.yml
@@ -9,9 +9,8 @@ jobs:
   build:
     runs-on: windows-latest
     steps:
-
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up JDK 17
         uses: actions/setup-java@v3
@@ -40,7 +39,7 @@ jobs:
         run: jpackage --type exe --name Zatikon --input target/jpack/ --main-jar zatikon.jar --main-class leo.client.WindowsLauncher --dest exepack --app-version '${{ steps.get-version.outputs.version }}' --icon src/main/resources/icons/zatikon.ico --win-dir-chooser --win-shortcut --win-menu --win-shortcut-prompt --win-upgrade-uuid 6540EFA3-65AB-4E93-920C-54793ECC7E86
 
       - name: Upload
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
-          name: zatikon-${{ steps.set-version.outputs.version }}
+          name: zatikon-${{ steps.get-version.outputs.version }}
           path: exepack
