--- a/.github/workflows/maven-windows.yml
+++ b/.github/workflows/maven-windows.yml
@@ -22,7 +22,7 @@ jobs:
         cache: maven
 
     - name: Build with Maven
-      run: mvn --batch-mode package --file pom.xml
+      run: mvn --batch-mode package --file pom.xml -Dlwjgl.natives=natives-windows
 
     - name: Set up package directories
       run: mkdir target/jpack
