--- a/.github/workflows/maven-linux.yml
+++ b/.github/workflows/maven-linux.yml
@@ -12,17 +12,17 @@ jobs:
     steps:
 
     - name: Checkout
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: Set up JDK 17
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
 
     - name: Build with Maven
-      run: mvn --batch-mode package --file pom.xml -Dlwjgl.natives=natives-windows
+      run: mvn --batch-mode package --file pom.xml -Dlwjgl.natives=natives-linux
 
 #    - name: Copy to staging
 #      run: mkdir staging && cp target/zatikon-*.jar staging
