--- a/.github/workflows/maven-windows.yml
+++ b/.github/workflows/maven-windows.yml
@@ -22,7 +22,7 @@ jobs:
         cache: maven
 
     - name: Build with Maven
-      run: mvn -Dlwjgl.natives=natives-windows --batch-mode --file pom.xml package
+      run: mvn "-Dlwjgl.natives=natives-windows" --batch-mode --file pom.xml package
 
     - name: Set up package directories
       run: mkdir target/jpack
