Handle LWJGL in build, plus renaming (#69)
* Handle LWJGL in build, plus renaming

* fix linux natives, update java action

* reorder args in windows build

* hopefully proper fix for Windows

--- a/.github/workflows/release-linux.yml
+++ b/.github/workflows/release-linux.yml
@@ -1,4 +1,4 @@
-name: Release build - JAR
+name: Release build - Linux JAR
 
 on:
   push:
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up JDK 17
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
@@ -29,7 +29,7 @@ jobs:
         run: mvn --batch-mode --file pom.xml versions:set '-DnewVersion=${{ steps.get-version.outputs.version }}'
 
       - name: Build with Maven
-        run: mvn --batch-mode --file pom.xml package
+        run: mvn --batch-mode --file pom.xml package -Dlwjgl.natives=natives-linux
 
       - name: Generate SHA256 checksum
         run: sha256sum target/zatikon-${{ steps.get-version.outputs.version }}.jar > target/zatikon-${{ steps.get-version.outputs.version }}.sha256
