--- a/.github/workflows/maven-windows.yml
+++ b/.github/workflows/maven-windows.yml
@@ -12,17 +12,17 @@ jobs:
     steps:
 
     - name: Checkout
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: Set up JDK 17
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
 
     - name: Build with Maven
-      run: mvn --batch-mode package --file pom.xml
+      run: mvn "-Dlwjgl.natives=natives-windows" --batch-mode --file pom.xml package
 
     - name: Set up package directories
       run: mkdir target/jpack
