label artifacts more clearly

--- a/.github/workflows/release-macos.yml
+++ b/.github/workflows/release-macos.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Upload
         uses: actions/upload-artifact@v4
         with:
-          name: zatikon-${{ steps.get-version.outputs.version }}
+          name: zatikon-${{ steps.get-version.outputs.version }}-macos
           path: dmgpack
 
 
