--- a/.github/workflows/maven-linux.yml
+++ b/.github/workflows/maven-linux.yml
@@ -28,9 +28,9 @@ jobs:
 #      run: mkdir staging && cp target/zatikon-*.jar staging
 
     - name: Upload
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
-        name: zatikon-1.2.0-dev
+        name: zatikon-1.2.0-dev-linux
         path: target/zatikon-*.jar
 
 # Well it's cool it can be deployed but I don't need that now
