--- a/.github/workflows/maven-windows.yml
+++ b/.github/workflows/maven-windows.yml
@@ -35,7 +35,7 @@ jobs:
       run: jpackage --type exe --name Zatikon --input target/jpack/ --main-jar zatikon.jar --main-class leo.client.WindowsLauncher --dest exepack --app-version 1.2.0 --icon src/main/resources/icons/zatikon.ico --win-dir-chooser --win-shortcut --win-menu --win-shortcut-prompt --win-upgrade-uuid 6540EFA3-65AB-4E93-920C-54793ECC7E86
 
     - name: Upload
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
-        name: zatikon-1.2.0-dev
+        name: zatikon-1.2.0-dev-windows
         path: exepack
