--- a/.github/workflows/release-linux.yml
+++ b/.github/workflows/release-linux.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Upload
         uses: actions/upload-artifact@v4
         with:
-          name: zatikon-${{ steps.get-version.outputs.version }}
+          name: zatikon-${{ steps.get-version.outputs.version }}-linux
           path: target/zatikon-*.jar
 
 # Well it's cool it can be deployed but I don't need that now
