--- a/.github/workflows/maven-linux.yml
+++ b/.github/workflows/maven-linux.yml
@@ -40,12 +40,13 @@ jobs:
       run: tar zcvf zatikon-1.2.0-dev-linux.tar.gz target/
 
     - name: Deploy Nightly
+      if: github.event_name != 'pull_request'  # don't deploy the PR builds
       uses: WebFreak001/deploy-nightly@v3.2.0
       with:
           upload_url: https://uploads.github.com/repos/zatikon/zatikon/releases/197933187/assets{?name,label}
           release_id: 197933187
           asset_path: ./zatikon-1.2.0-dev-linux.tar.gz
-          asset_name: zatikon-1.2.0-dev-linux-$$.tar.gz
+          asset_name: zatikon-linux-$$.tar.gz
           asset_content_type: application/gzip
 
 # Well it's cool it can be deployed but I don't need that now
