--- a/.github/workflows/maven-linux.yml
+++ b/.github/workflows/maven-linux.yml
@@ -37,7 +37,7 @@ jobs:
 #        path: target/zatikon-*.jar
 
     - name: Pack into tgz
-      run: tar zcvf zatikon-1.2.0-dev-linux.tar.gz target/
+      run: mv target/zatikon-*.jar . && tar -zcvf zatikon-dev-linux.tar.gz zatikon-*.jar
 
     - name: Deploy Nightly
       if: github.event_name != 'pull_request'  # don't deploy the PR builds
@@ -45,8 +45,8 @@ jobs:
       with:
           upload_url: https://uploads.github.com/repos/zatikon/zatikon/releases/197933187/assets{?name,label}
           release_id: 197933187
-          asset_path: ./zatikon-1.2.0-dev-linux.tar.gz
-          asset_name: zatikon-linux-$$.tar.gz
+          asset_path: zatikon-dev-linux.tar.gz
+          asset_name: zatikon-dev-linux-$$.tar.gz
           asset_content_type: application/gzip
 
 # Well it's cool it can be deployed but I don't need that now
