--- a/.github/workflows/maven-linux.yml
+++ b/.github/workflows/maven-linux.yml
@@ -37,7 +37,7 @@ jobs:
 #        path: target/zatikon-*.jar
 
     - name: Pack into tgz
-      run: mv target/zatikon-*.jar . && tar -zcvf zatikon-dev-linux.tar.gz zatikon-*.jar
+      run: mv target/zatikon-*.jar zatikon-dev-linux.jar
 
     - name: Deploy Nightly
       if: github.event_name != 'pull_request'  # don't deploy the PR builds
@@ -45,9 +45,9 @@ jobs:
       with:
           upload_url: https://uploads.github.com/repos/zatikon/zatikon/releases/197933187/assets{?name,label}
           release_id: 197933187
-          asset_path: zatikon-dev-linux.tar.gz
-          asset_name: zatikon-dev-linux-$$.tar.gz
-          asset_content_type: application/gzip
+          asset_path: zatikon-dev-linux.jar
+          asset_name: zatikon-dev-linux-$$.jar
+          asset_content_type: application/java-archive
 
 # Well it's cool it can be deployed but I don't need that now
 #    - name: Publish package
