--- a/.github/workflows/maven-linux.yml
+++ b/.github/workflows/maven-linux.yml
@@ -41,7 +41,7 @@ jobs:
 
     - name: Deploy Nightly
       if: github.event_name != 'pull_request'  # don't deploy the PR builds
-      uses: WebFreak001/deploy-nightly@v3.2.0
+      uses: lukky513/deploy-nightly@master
       with:
           upload_url: https://uploads.github.com/repos/zatikon/zatikon/releases/197933187/assets{?name,label}
           release_id: 197933187
