--- a/.github/workflows/main-jar.yml
+++ b/.github/workflows/main-jar.yml
@@ -9,6 +9,9 @@ on:
 
 jobs:
   build:
+    strategy:
+      matrix:
+        natives: [linux, windows, macos]
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -25,7 +28,7 @@ jobs:
         cache: maven
 
     - name: Build with Maven
-      run: mvn --batch-mode package --file pom.xml -Dlwjgl.natives=natives-linux
+      run: mvn --batch-mode package --file pom.xml -Dlwjgl.natives=natives-${{ matrix.natives }}
 
 #    - name: Copy to staging
 #      run: mkdir staging && cp target/zatikon-*.jar staging
